# duckdb-slack

./: CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  extension_config.cmake
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: README.md
src/: duckdb_slack_extension.cpp  json_utils.cpp  quack_extension.cpp  slack_client.cpp  slack_search.cpp
src/include/: duckdb_slack_extension.hpp  json_utils.hpp  slack_client.hpp  slack_search.hpp
test/: README.md
test/sql/: search_slack.test
